Closed Bug 790222 Opened 12 years ago Closed 12 years ago

Fix Azure standalone build

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

This makes the MSVC files copy in the MFBT files automatically for easy stand-alone building, it also adds a missing #define.
Attachment #660060 - Flags: review?(bgirard)
Attachment #660060 - Flags: review?(bgirard) → review+
https://hg.mozilla.org/mozilla-central/rev/ee490f6ac4e6
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: