Bug 790222: Fix azure stand-alone build. r=BenWa