gfx/2d/Types.h
@@ -149,7 +149,7 @@ struct GradientStop
 }
 }
 
-#ifdef XP_WIN
+#if defined(XP_WIN) && defined(MOZ_GFX)
 #ifdef GFX2D_INTERNAL
 #define GFX2D_API __declspec(dllexport)
 #else
